src/test/ui/const-generics/const_evaluatable_checked/simple.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/simple.rs:8:53
   |
LL | fn test<const N: usize>() -> [u8; N - 1] where [u8; N - 1]: Default {
   |                                                     ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/simple.rs:8:35
   |
LL | fn test<const N: usize>() -> [u8; N - 1] where [u8; N - 1]: Default {
   |                                   ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to 2 previous errors

